# supabase-security-suite

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MANIFEST.in  PRODUCTION_READINESS.md  README.md  README_STATUS.md  REFACTORING_STATUS.md  config.example.json  coverage.xml  docker-compose.example.yml  install.ps1  install.sh  pyproject.toml  pytest.ini  requirements.txt  scan.py  setup.py  start_dashboard.sh  test_suite.py
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
src/supabase_security_suite/: __init__.py  __main__.py
src/supabase_security_suite/cli/: __init__.py  main.py
src/supabase_security_suite/core/: __init__.py  config.py  scanner.py  utils.py
src/supabase_security_suite/dashboard/: server.py
src/supabase_security_suite/dashboard/templates/: dashboard.html
src/supabase_security_suite/integrations/: __init__.py  ai_examples.py
src/supabase_security_suite/reporting/: __init__.py  deduplicator.py  models.py
src/supabase_security_suite/scanners/: __init__.py  config_scanner.py  docker_scanner.py  graphql_scanner.py  rls_scanner.py  runtime_scanner.py  secrets_scanner.py  sql_injection_scanner.py  static_scanner.py
static/: version.txt
supabase_security/: __init__.py  cli.py
supabase_security/core/: __init__.py  config.py  finding.py  scanner.py
supabase_security/integrations/: __init__.py  config_parser.py  rls_simulator.py  supabase_cli.py
supabase_security/scanners/: __init__.py  database_scanner.py  runtime_scanner.py  secret_scanner.py  static_scanner.py
templates/: dashboard.html  dashboard_new.html
tests/: __init__.py  conftest.py
tests/integration/: test_full_scan.py
tests/unit/core/: test_config.py  test_models.py  test_scanner.py
tests/unit/integrations/: test_ai_examples.py
tests/unit/reporting/: test_deduplicator.py
tests/unit/scanners/: test_config_scanner.py  test_docker_scanner.py  test_graphql_scanner.py  test_rls_scanner.py  test_runtime_scanner.py  test_secrets_scanner.py  test_sql_injection_scanner.py  test_static_scanner.py
